working on c1 and 2

--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -103,10 +103,7 @@ Table 5.1 - A shorter extract of Vignette 1 focusing on an overview of the use o
 
 ![Figure.5.x - Location of Toby ](./Pictures/vign_1_a_v1.png){width=90%}
 
-    Toby tests his game by playing through the many different levels of his game showing fluidity and skill. At times during playtesting, Toby undertakes a process of changing the game code to later his level layout. Toby finishes playtesting and navigates to a web page containing a menu of gameplay design pattern to add to his game he clicks on the entry for adding a moving enemy. He undertakes a careful process of exploring, copying and pasting code from an exemplar document into the correct locations. The resulting change to his game is shown in Figure 5.x. The process required Toby to use and navigate multiple tools [^2], which he undertook  in a self-directed way, occasionally rapidly and fluently, and at times in a more hesitant manner.
-
-
-The full Vignette 1 demonstrates that  the immediate audience of his peers plays an important role in guiding his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design.
+    Toby tests his game by playing through the many different levels of his game showing fluidity and skill. At times during playtesting, Toby undertakes a process of changing the game code to later his level layout. Toby finishes playtesting and navigates to a web page containing a menu of gameplay design pattern to add to his game he clicks on the entry for adding a moving enemy. He undertakes a careful process of exploring, copying and pasting code from an exemplar document into the correct locations. The resulting change to his game is shown in Figure 5.x. The process required Toby to use and navigate multiple tools [^2], which he undertook  in a self-directed way, occasionally rapidly and fluently, and at times in a more hesitant manner. The immediate audience of his peers appear to influence his design decisions. During the session, Toby invites other group members to play his game, initiating and responding to conversations about the difficulty of his game design. He makes a comment to a peer while self-playtesting his game  "I’m just going to have one go of beating this (his own game). It’s 21 levels in it. So Yeeeah.".  A student helper also notes his distinct level design. "Is yours the one where level one is harder than level three? ... I like that.".
 
 ADD A QUICK SUMMARY OF PROCESS. LINK TO THIS IMAGE.
 
@@ -184,11 +181,9 @@ These tensions reveal an underlying contradiction in the activity system between
 
 #### Design response
 
-The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate [^14]. I asked parents for support in organising and bringing more order to group and planning processes. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
+The first response to this conflict was a non-technical one. After one session in P1, I emailed participants , expressing that I felt daunted by the task of helping the integration of the disparate creative elements being produced into cohesive game projects, a process which I felt responsible to facilitate. In response emailed parents for support in organising and bringing more order to group and planning processes[^14]. The group planning process improved, and the self-organisational abilities of parents and tenacity of young people involved developed freeing up more of my time to support technical issues in the remaining sessions.
 
 <!-- ### Technical description of the core toolset used for P2 and P3 -->
-
-
 
 Regarding tools, these tensions outlined above shaped a series of design adaptations between P1 and P2. Recognising the need for scaffolding without over-prescription, I developed a _starter game template_ with greater scaffolding including putting key variables at the start of the game code, and embedding comments in the code highlighting lines intended for modification. The process of developing the affordances of the starter game involved close consideration to the imagined first encounters with the game and underlying code. This game template was introduced by a facilitators prompted learners to play a _broken_ game in a web page. They were asked to work out in what way the game was broken and then invited to look at the code to try to _fix_ the game (e.g to make changes to progress) [^14b].
 
@@ -217,14 +212,12 @@ in the P2 starting template the use of a graphical grid structure to edit level 
 
 ![Figure 5.grid - Grid based editing of level design with a simple key for hazards, coins, and platforms.](./Pictures/grid_editor_1.png){width=95%}
 
-At this stage I also invite the reader to play the starting game template and view the underlying code [^18a]. An Appendix with a greater level of design issues related to the structure of the template is included as Appendix D.1.? allowing replicability by other practitioners.
+At this stage I also invite the reader to play the starting game template and view the underlying code [^18a]. An Appendix with a greater level of design issues related to the structure of the template is included as Appendix D.1.? allowing replication by other practitioners.
 
 
 <!--
 EDITED THESE SECTIONS DOWN - MOVED TO APPENDIX
-
 Names in Appendix
-
 - Code variables and structure
 -   Level design
 - Graphical asset scaffolding
@@ -232,33 +225,20 @@ Names in Appendix
 
 ##### Brief Analysis
 
-
 This section now summarise and analyse some of the ways in which the design helped address the tensions described above. The in line with the exploratory rather than quantitive nature of the thesis, the aim is not to prove efficacy of the intervention rather than to explain its role in the iteration. However broad descriptions of impact are included to help situate the later sections.
-
 
 <!-- This chapter discusses this design in relation to existing research on learning to programme through the use of supporting code templates. -->
 <!-- INCLUDE SOME INTERVIEW DATA IF USEFUL.
 IF NOT THEN DO SOME SIGNPOSTING AS TO WHERE THE IMPACT IS EXPLORED IN LATER CHAPTERS. ETC.
 A BIT MOE OF A SUMMARY.. -->
+<!-- CHECK FOR DUPLICATION & SIGNPOST -->
 
-CHECK FOR DUPLICATION & SIGNPOST
-Vignette 1 shows Toby designing many levels as a way of making his game distinct from others. This technical adaptation thus had a subsequent impact on other aspects of the coding environment in P2.
+The staring template reduced the difficultly and time needed to initiate a game project. This contributed to a significant shift in working practices from P2 onwards characterised by smaller working groups, normally pairs or individuals. In addition, the process of starting with a working game and altering existing affordances within the template allowed participants to start to share their emerging games with others immediately,
+which contributed to the concurrent increase the time spent spent undertaking peer play testing at this phase. The process of selecting a reduced toolset in P2 helped as well as address potential for participants to be overloaded by the diversity of the tools at play also created a greater alignment of participant experience. This appears to be a contributing factor to increased peer exchange of skills and knowledge.
 
-The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games.
+The technical adaptation of the text-based level editing grid had a specific impact on the coding experience and wider environment. The ability for individuals and pairs to make quick changes to the games templates via in terms of the affordances described in the previous section appeared to build their ownership over these fledgling games. Vignette 1 shows Toby designing many levels of varying difficultly in a way which made the experiences of playing his game distinct from others. This individuality is noted and encouraged by a student helper (see Vignette 1 extract in the previous section).
 
-The staring template made the was so easy it resulted in many, smaller groups or individuals. In addition starting with a working game increase the time spent playtesting the work others.
-
-The process of selecting a reduced toolset in P2 helped address potential overload and fracturing of experience, thus increasing the possibility for peer exchange of skills and knowledge.
-
-
-COMPRESS & SIGNPOST
-
-I now discuss this design in relation to existing research on learning to programme through the use of supporting code templates.
-
-The template design is an example of a “half-baked” microworld in the form of a games [@kynigos_children_2018; @kynigos_half-baked_2007], and aligns broadly with the UMC framework [@lee_computational_2011]. The work of Kynigos et al. [-@kynigos_children_2018] on the concept of half-baked microworlds and games helped me focus on the motivational aspect of incomplete game affordances to drive initial engagement with the use and modify stages of the UMC approach. The use of a template aligned with half-baked game/microworld approach [@kynigos_children_2018] helped by introducing hands on use of coding tools early, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].
-
-
-
+I now discuss this design in relation to existing research on the use of supporting code templates in programming education. The template design is an example of a “half-baked” microworld (in the form of a game) [@kynigos_children_2018; @kynigos_half-baked_2007], and aligns broadly with the UMC framework [@lee_computational_2011]. The work of Kynigos et al. [-@kynigos_children_2018] on the concept of half-baked microworlds and games shares a similar focus on the motivational aspect of incomplete game affordances to drive initial engagement. This motivation spurs and shapes activity here in early making stages of my learning design, aligning with the use and modify stages of the UMC approach [@lee_computational_2011] [see Ch.4]. The use of a template introducing hands on use of coding tools early in the process, thus avoiding the mismatch between participants' planning and the technical limits of their novice abilities. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982].
 
 <!-- FOOTNOTE SIGNPOSTS CH.6 - ADD AS TENSION IN TABLE TOO? -->
 Turning to the aspect of authenticity in the learning design, it is valuable to re-examine the factors driving my choice of JavaScript and Phaser, a professional, open-source game-making framework. Specifically, this choice relates to the potentially empowering impact of exposing participants to authentic technologies and concepts in hands-on, exploratory processes. Ratto [-@ratto_critical_2011] discusses this through critical making, a process that playfully brings forward Latour's [-@weibel_making_2005; -@latour_cautious_2008] ideas of shifting from matters of fact to matters of concern by revealing taken-for-granted artefacts as deliberately designed objects. This was evident in conversations between participants where they expressed a sense of inspiration or engagement with previously unknown technologies. For instance, exchanges demonstrated a growing appreciation for the complexity behind professional games, based on their perception of the effort required for their own simple game projects:
@@ -269,11 +249,9 @@ Turning to the aspect of authenticity in the learning design, it is valuable to 
 
 <!-- ADDITION MADIHA's reflection in interview data. -->
 
+While my design aim was in part to reduce coding syntax errors [^syntax], in part to reduce resulting anxiety and frustration in novice coders [@denny_all_2012], I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^20]. Thus, this careful structuring of the template appeared to mitigate against the challenges of syntax errors.
 
-
-While my design aim was in part to reduce coding syntax errors and thus reduce learner anxiety, I did not wish not to remove the possibility of learners making mistakes entirely. While even these small changes involved potential syntax errors, as these simple expressions were surrounded by other lines modelling the correct syntax, they could often be corrected by the participants without facilitator support [^20].
-
-SIGN POST
+<!-- hi mick SIGN POST -->
 
 ### Contradiction area 2: contradictions associated with project navigation and use of documentation
 
@@ -284,16 +262,11 @@ from previous version
 
 While it was clear that participants needed to develop their coding abilities, the emerging, informal, experimental nature of the learning environment seemed to me to not suit whole-class instruction. This intuition was supported by my reflections on two attempts to deliver whole group presentations of key coding concepts, which I judged in my journal, based on visual cues of engagement, to be unwelcome interruptions to participants’ making activities. Instead, I addressed problems on an individual basis. However, as  more issues arose, I became overwhelmed by the group dynamics and technical demands on my time. After one session, I emailed participants (see Appendix.narrative2), expressing that I felt daunted by the task of facilitating the integration of the disparate creative elements being produced into a cohesive project. I asked parents for ideas and support in organising and bringing more order to group and planning processes. These developing tensions can be framed as contradictions between the tools available to participants and the object of actualising their ideas and graphical assets in code form. Additionally, my limited time as a facilitator highlights a dysfunctional relationship between the division of labour and the object. -->
 
-MAKE THIS BRIEF AND DIRECT.
+This section outlines a contradiction associated with the need for and introduction of supporting documentation to scaffold the game-making process. In P1 participants followed divergent creative pathways using a diverse set of tools (see description in following section), but at a cost of a sense of an overall coherence and shared understanding of the process. In P1, groups organisation coalesced around the creation of wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In between P1 and P2 I reflected on how this process could be developed to structure of documentation to support this approach to of project organisation.
 
-This section outlines a contradiction associated with the introduction of supporting documentation to scaffold the game-making process. Recapping, the divergent creative pathways  of P1 , but at a cost of a sense of an overall coherence and shared understanding of the process, reflecting a tension between learner agency, and the need for shared reference points that could support peer support.
+<!-- , reflecting a tension between learner agency, and the need for shared reference points that could support peer support. -->
 
-Early in P2, the starting game template approach had the unintended consequence of reducing the average size of working groups thus increasing individual coding project  projects, which in turn increased demand on my time as a technical troubleshooter. At this stage, while the in-tool scaffolding provided by the code template accelerated production for  learners significantly [@laurillard2020significance], participants still required direct support from me when adding new code structures causing delays and participant frustration due to the limited time I could offer each group. Resources to support implementation were still driven by specific participants request, however due to a higher similarity in underlying code structure, these resources now became suitable for reuse. As such, in addition to direct coding help, as P2 progressed, a small library of short stand-alone instruction documents began to accumulate.
-
-THIS WAS P1 TO START? how to reframe? DUPLICATION WITH START OF DESIGN RESPONSE TOO
-
-In P1, groups had created wish lists of game features, which acted as mediating tools to coordinate between different team members and to request facilitator support to implement them via code structures. In P2 I reflected on how I could follow this lead to allow the use of the structure of documentation to continue to help this activity of project organisation.  [BUT DID I REALLY? MAKE MORE TENTATIVE]
-
+In P2, a reduction in the average size of working groups and subsequent increase in the number of game coding projects at play, increased demand on my time as a technical troubleshooter. At this stage, while the in-tool scaffolding provided by the code template accelerated production for  learners significantly [@laurillard2020significance], participants still required direct support from me when adding new code structures causing delays and participant frustration due to the limited time I could offer each group. Early in P2, resources to support implementation were driven by specific participants request, however unlike P1 [^cdiv], due to a higher similarity in underlying code structure, the supporting resources created for one project now became suitable for reuse within others. As such, as P2 progressed, a library of short stand-alone instruction documents began to accumulate.
 
 <!--
 CHECK BACK FOR DUPLICATION
@@ -301,9 +274,12 @@ After one session in P1, I emailed participants , expressing that I felt daunted
 
 #### Surfaced tensions and framed contradiction
 
-A recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for facilitator-led instruction and support. This was compounded by resistance to whole-class input, which consistently yielded low engagement. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [-@repenning_scalable_2015], as discussed in Chapter 2, frame this as a barrier arising from a principles-first approach. The authors describe the risk of such an approach plainly as participant boredom. The challenge became how to support progress given my limited facilitator time, without losing the participant choice over their pathway allowed by a responsive documentation process. I also struggled reconcile an additional tension between this responsive approach to providing documentation and requests from some parents asking for resources involving background concepts and explanations of coding constructs.
+A TRANSITION.
 
-Together, these challenges surfaced a contradiction between an important component of the object of the activity (learner-led game creation) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without the input of facilitator mediation. Thus, the flexibility of the environment became problematic. This contradiction appeared to be a double bind [@engestrom_expansive_2001]; how could I provide greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach? This contradiction drove extensive revision in the learning design.
+
+A recurring tension noted in my journal during this period concerned the clash between divergent participant learning paths and the need for technical support. This was compounded by resistance to whole-class teaching input[^input], which consistently yielded low engagement, even when I had identified common issues. I surmised that participants saw these attempts as class teaching as not immediately relevant, misaligned with learners’ preferred hands-on working styles, and disruptive to the flow of their making. Repenning et al. [-@repenning_scalable_2015], as discussed in Chapter 2, frame this resistance as a barrier arising from a principles-first approach. The authors describe the risk of such an approach plainly as participant boredom. The challenge became how to support progress given my limited facilitator time, without losing the important pedagogical feature of participant choice over their pathway. I also struggled reconcile an additional tension between this responsive approach to providing documentation and requests from some parents asking for resources involving background concepts and explanations of coding constructs.
+
+Together, these challenges surfaced a contradiction between an important component of the object of the activity (learner-led game creation) and the evolving rules and mediating artefacts intended to support that process. The activity system lacked a shared, structured way for participants to orient themselves in the process to develop or to reuse successful code patterns without the input of facilitator mediation. Thus, the flexibility of the environment became problematic. This contradiction appeared to be a double bind [@engestrom_expansive_2001]; how could I provide greater support via documentation detailing implementation and a underlying principles without compromising the responsiveness to the learner pathways that was foundational to the ethos of my approach? This contradiction drove extensive revision in the learning design concerning methods of technical support.
 
 #### Design response
 
@@ -360,8 +336,6 @@ I also experimented with ways to present these feature choices in an accessible,
 Table 5.x Categorisation of game design patterns used in P4.
 
 
-
-
 #### Brief analysis
 
 I now turn to a short analysis of the trajectory of the supporting resources in relation to other research. It is covered only briefly as it is developed more extensively in Chapter 6.
@@ -380,8 +354,6 @@ CHANGE GRAPHIC TO A TABLE IN CH.6 - AND REVISIT IT'S PLACE IN THE OVERALL ARGUME
 
 WHAT ARE THE LIMITS OF THIS CONCEPTUALLY/ PRACTICALLY?
 NOTE - DEVELOP THIS A BIT AS IT IS EXPLORED IN CHAPTER 6. -->
-
-
 
 <!-- While the code snippets, practical instructions, and chapters on core principles continued to pose some challenges (as seen in Vignette 6.1),
 the video data analysed in the following chapter shows an increase in participants’ practical ability to implement game features.  -->
@@ -814,14 +786,10 @@ For a recap of benefits see Chapter 2.
 
 [^ldim]: While the learning resources of P2 and P3, which is analysed in depth are explored in more detail, those developed in D3 for P4 and P5 are relevant as a more suited to classrooms and therefore greater interplay with the learning map of curricular concepts.
 
-<!-- Given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.  -->
+[^syntax]: Syntax errors in computer coding equate to grammatical errors in other languages. They occur when code violates the rules of the programming language, such as missing punctuation, incorrect structure, or misspelled commands, preventing the program from running.
 
-<!-- [^1]: https://mickfuzz.github.io/makecode-platformer-101/
-[^2]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
-[^3]: https://mickfuzz.github.io/makecode-platformer-101/addHazard
-[^4]: https://dailypapert.com/mit-logo-memos/
-[^5]: https://web.archive.org/web/20180426051205/http://phaser.io/tutorials/making-your-first-phaser-2-game
-[^6]: https://glitch.com/~grid-game-template
-[^7]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#create-a-game-space
-[^8]: https://www.piskelapp.com
-[^9]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/ -->
+[^cdiv]: In P1 there was a greater diversity in the underlying structure of the code projects as the starting template used at that stage was less developed.
+
+[^input]: In the form of facilitator-led instruction using a projection screen, powerpoint and demonstrations of code problems and solutions. Given the context of home education, resistance to this traditional teaching method was not unexpected.
+
+<!-- Given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.  -->
