--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -320,7 +320,7 @@ To meet participants' requests for foundational coding knowledge, I created step
 
 Figure 5.patterns : a screenshot of the hub of GDPs pointing to code snippets and instructional chapters
 
-I also experimented with ways to present these feature choices in an accessible, engaging format, see Figure 5.patterns. Recognising that multiple documentation formats sometimes led to confusion, I created a centralised hub, structured around graphical representations of the game features, to host both snippets and tutorial chapters, making navigation more intuitive and orienting documentation towards participants' gameplay experience. At this stage I suggest the reader take one minute to browse that experience at -https://glitch-game-club.github.io/ggcp/ggc-examples/.
+I experimented with ways to present these feature choices in an accessible, visually engaging format, see Figure 5.patterns. Cautious that multiple documentation formats could lead to confusion, I created a centralised hub, structured around these graphical representations of the game features, to host both snippets and tutorial chapters, with an aim to make navigation more intuitive and to orienting documentation around participants' gameplay experience [^bro].
 
 
 | **Game Mechanics**| **Game Polish** | **Game Space** | **Challenge Systems**|         
@@ -791,5 +791,7 @@ For a recap of benefits see Chapter 2.
 [^cdiv]: In P1 there was a greater diversity in the underlying structure of the code projects as the starting template used at that stage was less developed.
 
 [^input]: In the form of facilitator-led instruction using a projection screen, powerpoint and demonstrations of code problems and solutions. Given the context of home education, resistance to this traditional teaching method was not unexpected.
+
+[^bro]: At this stage I suggest the reader take one minute to browse that experience at - https://jamm-labs.github.io/ggcp/ggc-examples/
 
 <!-- Given the sensitivity to alienation from programming culture shown in this section, and the fruitful nature of the peer playtesting activities. I did not prioritise the introduction of these concepts, or activities to teach or activities to reflect on how they were used retrospectively, adaptations that would suit migration to a computing classroom.  -->
