--- a/_posts/thesis_chapters/2025-7-5-Design_v16.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v16.md
@@ -508,20 +508,11 @@ DEVELOP THIS / LINKS/
 
 <!-- The use of a broken starting game also aligns with and the more specific technique of starting with a half baked game template [@grizioti_game_2018-1] -->
 
-Similarly, there is a strong alignment of the underlying principles of the learning design described above with research constructionist design heuristics [^39]. This part of the discussion briefly locates the similarities using specific examples and then explores a fundamental difference in approach in regards to key aspects of authenticity in the learning design. Of particular relevance to this design process is the contructionist principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild [^39a]. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, I propose this design as a form of microworld [^39b].
+Similarly, there is a strong alignment of the underlying principles of the learning design described above with research constructionist design heuristics [^39]. This part of the discussion briefly locates the similarities using specific examples and then explores a fundamental difference in approach in regards to key aspects of authenticity in the learning design. Of particular relevance to this design process is the contructionist principle choose black boxes carefully [@resnick_reflections_2005]. Resnick et al.[-@resnick_reflections_2005] describe black boxes as abstractions that remove potentially problematic areas of the production process, creating a protective, scaffolded learning experience while maintaining a boundary with the authentic challenges of coding in the wild [^39a]. Based on Laurillard's [-@laurillard2020significance] interpretation of the constructionist design of microworlds as being driven by affordances that structure user experimentation to enable exploration and concept formation without reliance on direct instruction, this design aligns with these characteristics [^39b].
 
-It is, however, an adapted Microworld: in a similar way to how the work of Kynigos et al. extends the Microworld construct through the incompleteness of the design as a half-baked, my design is also distinguishable in that it offers greater authenticity and connection to professional environments and documentation. When compared to a constructionist microworld, like the Mathworld of LOGO and drawing turtles, the structure of my learning design is characterised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems.
+However, this structure of the learning design should interpreted as an adapted  Microworld, distinguishable in that it offers greater authenticity and connection to professional environments and documentation. When compared to a constructionist Microworld, like the Mathworld of LOGO and drawing turtles, the structure of my learning design is characterised by its relatively porous borders between this controlled environment and other, more authentic coding ecosystems.
 
-<!-- When compared to many other text coding pedagogies this learning design can be seen as highly scaffolded [EXPLAIN?]. However,  -->
-
-
-
-I argue that increased scaffolding of learner resources and tools can enhance instrumental agency [IN HERE OR NOT - PERHAPS SIGNPOST AT END OF HARBOUR METAPHOR] for novice coders but potentially at the cost of limiting access to the tools and processes of authentic creative communities.
-
-
-A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a protective, scaffolded learning environment.
-
-The relationship between authentic and scaffolded processes can be understood as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate.
+A possible drawback of using a professional tool for novice learners is the risk of culture shock when participants encounter the unfamiliar and potentially alienating aspects of a professional coding ecosystem. The learning design outlined in this chapter helps address at least the beginning of this process by providing a scaffolded learning environment as explored in section C1. Following Resnick [-@resnick_reflections_2005], I still "choose black boxes carefully", but my design choices avoid limiting access to the tools and processes of authentic creative communities, instead providing an alternative strategy to the scaffolding process. In summary, the relationship between use of authentic tools and scaffolded processes can be understood in this context as an inherent dialectical tension that learning designers should account for rather than attempt to eliminate. The following section explores this tension further using a metaphorical approach.
 
 <!-- The use of black boxes is also widespread in professional coding practices, particularly through code libraries and frameworks. These tools provide pre-written, self-contained sections of code to simplify complex operations.  -->
 
